--- a/RedisClusterTemplate/DockerFile
+++ b/RedisClusterTemplate/DockerFile
@@ -1,10 +1,10 @@
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
 
 WORKDIR /app
-COPY /RedisClusterTemplate/*.csproj ./
+COPY /*.csproj ./
 RUN dotnet restore
 
-COPY /RedisClusterTemplate ./
+COPY . ./
 RUN dotnet publish -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
