--- a/RedisClusterTemplate/Properties/launchSettings.json
+++ b/RedisClusterTemplate/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "redis",
+      "launchUrl": "api/redis/health",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,11 +20,11 @@
     "RedisClusterTemplate": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "redis",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "api/redis/health",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
