fix docker compose

--- a/RedisClusterTemplate/RedisClusterTemplate.csproj
+++ b/RedisClusterTemplate/RedisClusterTemplate.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Services\" />
+    <Folder Include="Configs\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="RedisClusterTemplate\**\*" Exclude="RedisClusterTemplate\**\bin\**;templates\**\obj\**" />
