add redis demo project

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ TemplateProject/bin
 TemplateProject/obj
 TemplateProject/.vs
 TemplateProject/Properties/launchSettings.json
+RedisDemo/docker/data
