--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -16,10 +16,10 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.301
-    - name: Goto Tempalte Project folder
-      run: cd TemplateProject
+        dotnet-version: 3.1.301    
     - name: Install dependencies
+      working-directory: ./TemplateProject
       run: dotnet restore
     - name: Build
+      working-directory: ./TemplateProject
       run: dotnet build --configuration Release --no-restore    
