--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -25,7 +25,7 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     - name: Build Nuget
       working-directory: ./TemplateProject
-      run: dotnet pack dotnet pack -o ./output -c Release /p:Version=1.0.${{github.run_id}}
+      run: dotnet pack -o ./output -c Release /p:Version=1.0.${{github.run_id}}
     - name: Push Nuget
       working-directory: ./TemplateProject
       run: dotnet nuget push /output/Superwalnut.RedisClusterTemplate.1.0.${{github.run_id}}.nupkg -k oy2ocdeouzavgv5sklxa6ccntqgmfmwuborj67o5wnj4hy -s https://api.nuget.org/v3/index.json
